Fixed some alignments

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -95,6 +95,8 @@ body {
 	font-size: var(--font-size-base);
 	margin: 6px;
 	padding: 10px 10px;
+	/* height: 1.5rem; */
+	line-height: 1.5rem;
 	text-align: center;
 }
 
@@ -229,14 +231,30 @@ body {
 	flex-direction: column;
 	margin: 16px 16px;
 	overflow: hidden;
+	justify-content: center;
 }
 
 .row {
+	/* flex:2 1 auto; */
+	/* flex-basis: 72px; */
+	align-items: center;
 	display: flex;
 	background-color: var(--card-bg-color);
 	/* padding: 8px; */
+	/* min-height: 96px; */
 	border-bottom: 1px solid #343a401f;
 	/* box-shadow   : rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px; */
+}
+
+.row:last-of-type {
+	border-bottom: none;
+
+}
+
+.cbox {
+	/* margin-top: -6px; */
+	/* margin-top: -1rem; */
+	/* flex-direction: horizontal; */
 }
 
 .row>.cell:nth-child(1) {
@@ -259,6 +277,12 @@ body {
 	/* background-color: #343a400f; */
 	flex-basis: 50%;
 	/* justify-content: space-between; */
+	
+}
+
+.flex {
+display: flex;
+
 }
 
 .row>.cell:nth-child(4) {
@@ -271,6 +295,9 @@ body {
 }
 
 .cell {
+	/* justify-content: center; */
+	/* flex-direction: column; */
+	/* align-items: center; */
 	padding: 4px;
 	text-align: center;
 	overflow-y: auto;
